<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#AAE"
    tools:context=".AboutUsFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dip"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dip"
        android:text="@string/copyright"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/textViewLink"
        android:src="@drawable/github"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView21"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="1dp"
        android:layout_marginRight="16dip" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="14dp"
        android:text="@string/developer1"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/devId1"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/group1"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/Pcode"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginStart="16dip"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="5dip"
        android:layout_marginEnd="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginBottom="5dip"
        android:text="@string/stline"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/dev2"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/devId2"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/group1"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/Pcode"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView11"
        android:layout_marginStart="16dip"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="5dip"
        android:layout_marginEnd="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginBottom="5dip"
        android:text="@string/stline"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView12"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/dev3"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView13"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/devId3"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView14"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/group1"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView15"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/Pcode"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView16"
        android:layout_marginStart="16dip"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="5dip"
        android:layout_marginEnd="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginBottom="5dip"
        android:text="@string/stline"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView17"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/dev4"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView18"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/devId4"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView19"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/group2"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView20"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="2dp"
        android:text="@string/Pcode"
        android:textColor="@color/black"
        android:textColorLink="@color/black" />

</RelativeLayout>